[gd_scene load_steps=2 format=3 uid="uid://b2fwyexo5gbxw"]

[ext_resource type="Script" uid="uid://lfq67rpt7ec6" path="res://scripts/CombatPhase.gd" id="1_8n3hw"]

[node name="CombatPhase" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8n3hw")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.05, 0.05, 1)

[node name="BattlePanel" type="Panel" parent="."]
self_modulate = Color(1, 0.9, 0.8, 0.95)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="BattlePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="BattlePanel/MarginContainer"]
layout_mode = 2

[node name="PhaseLabel" type="Label" parent="BattlePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "战斗进行中"
horizontal_alignment = 1

[node name="TimerLabel" type="Label" parent="BattlePanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="InfoContainer" type="HBoxContainer" parent="BattlePanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PlayerInfo" type="VBoxContainer" parent="BattlePanel/MarginContainer/VBoxContainer/InfoContainer"]
layout_mode = 2

[node name="PlayerHP" type="Label" parent="BattlePanel/MarginContainer/VBoxContainer/InfoContainer/PlayerInfo"]
layout_mode = 2
text = "玩家 HP: 100"

[node name="PlayerPower" type="Label" parent="BattlePanel/MarginContainer/VBoxContainer/InfoContainer/PlayerInfo"]
layout_mode = 2

[node name="PlayerDice" type="Label" parent="BattlePanel/MarginContainer/VBoxContainer/InfoContainer/PlayerInfo"]
layout_mode = 2

[node name="PlayerFinalPower" type="Label" parent="BattlePanel/MarginContainer/VBoxContainer/InfoContainer/PlayerInfo"]
layout_mode = 2

[node name="EnemyInfo" type="VBoxContainer" parent="BattlePanel/MarginContainer/VBoxContainer/InfoContainer"]
layout_mode = 2

[node name="EnemyHP" type="Label" parent="BattlePanel/MarginContainer/VBoxContainer/InfoContainer/EnemyInfo"]
layout_mode = 2
text = "敌人 HP: 100"

[node name="EnemyPower" type="Label" parent="BattlePanel/MarginContainer/VBoxContainer/InfoContainer/EnemyInfo"]
layout_mode = 2

[node name="EnemyDice" type="Label" parent="BattlePanel/MarginContainer/VBoxContainer/InfoContainer/EnemyInfo"]
layout_mode = 2

[node name="EnemyFinalPower" type="Label" parent="BattlePanel/MarginContainer/VBoxContainer/InfoContainer/EnemyInfo"]
layout_mode = 2

[node name="BattleLog" type="RichTextLabel" parent="BattlePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
